CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(gpu_deconvolution)

# FIND_PACKAGE(CUDA REQUIRED)
# FIND_PACKAGE(JNI REQUIRED)

INCLUDE(FindCUDA)
INCLUDE(FindJNI)

INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})

SET(CUDA_VERBOSE_BUILD ON)

FILE(GLOB SOURCES "*.cu" "*.cpp")

# these two lines must precede CUDA_ADD_EXECUTABLE etc.
LIST(APPEND CUDA_NVCC_FLAGS_RELEASE -gencode arch=compute_30,code=sm_30)
LIST(APPEND CUDA_NVCC_FLAGS_RELEASE -gencode arch=compute_35,code=sm_35)

CUDA_ADD_EXECUTABLE(NativeSPIMReconstructionCudaExe ${SOURCES})
CUDA_ADD_LIBRARY(NativeSPIMReconstructionCudaDll ${SOURCES} SHARED)

TARGET_LINK_LIBRARIES(NativeSPIMReconstructionCudaExe ${JNI_LIBRARIES} ${CUDA_LIBRARIES})
TARGET_LINK_LIBRARIES(NativeSPIMReconstructionCudaDll ${JNI_LIBRARIES} ${CUDA_LIBRARIES})

CUDA_ADD_CUFFT_TO_TARGET(NativeSPIMReconstructionCudaExe)
CUDA_ADD_CUFFT_TO_TARGET(NativeSPIMReconstructionCudaDll)

